[project]
name = "poke-worlds"
version = "0.1.0"
description = "Emulation, state parsing, low-level control and Gym environments for Gen I and Gen II Pokémon games"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "bidict>=0.23.1",
    "click>=8.3.0",
    "gymnasium>=1.2.3",
    "huggingface-hub>=0.36.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pdoc>=16.0.0",
    "pyboy==2.4.0",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
    "scikit-image>=0.25.2",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
]

[project.optional-dependencies]
vlm = [
    "accelerate>=1.12.0",
    "anthropic>=0.76.0",
    "einops>=0.8.1",
    "openai>=2.15.0",
    "peft>=0.18.1",
    "protobuf>=6.33.2",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
